// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Case Block renders correctly with a graphic image 1`] = `
<div
  className="container"
>
  <div
    className="case-block"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-lg-4"
      >
        <div
          className="case-block__content"
        >
          <h2>
            Title
          </h2>
          <h3>
            Subtitle
          </h3>
          <p>
            Example Case Block Text
          </p>
        </div>
      </div>
      <div
        className="col-xs-12 col-lg-8 case-block__col-img"
      >
        <img
          alt="Example"
          src="example.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Case Block renders correctly without a graphic image 1`] = `
<div
  className="container"
>
  <div
    className="case-block"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-lg-4"
      >
        <div
          className="case-block__content"
        >
          <h2>
            Title
          </h2>
          <h3>
            Subtitle
          </h3>
          <p>
            Example Content
          </p>
        </div>
      </div>
      <div
        className="col-xs-12 col-lg-8 case-block__col-img"
      />
    </div>
  </div>
</div>
`;
